--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -91,8 +91,7 @@ services:
     depends_on:
       - minio
     environment:
-      - MINIO_ENDPOINT=minio
-      - MINIO_PORT=9000
+      - MINIO_ENDPOINT=minio:9000
       - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=admin1234
       - PUBLIC_ENDPOINT=minio.localhost
