--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
       - MINIO_ENDPOINT=minio:9000
       - AWS_ACCESS_KEY_ID=admin
       - AWS_SECRET_ACCESS_KEY=admin1234
-      - PUBLIC_ENDPOINT=minio.localhost
+      - PUBLIC_ENDPOINT=minio.localhost:9000
       - PUBLIC_USE_SSL=false
     labels:
       - "traefik.enable=true"
