--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,8 @@ services:
       - "traefik.http.services.frontend.loadbalancer.server.port=80"
     networks:
       - eurostar
-    ports:
-      - "80:80"
+    #ports:
+    #  - "80:80"
 
   assistance-api:
     build: ./assistance_api
